test/cli/test-validating-policy/conditional-update-operation/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
